--- a/config/preamble.tex
+++ b/config/preamble.tex
@@ -2,7 +2,7 @@
 
 \usepackage{fancyhdr}
 \usepackage{fontspec} 
-%\defaultfontfeatures{Ligatures=TeX}  %if you want to use this font you need to download it
+\defaultfontfeatures{Ligatures=TeX}  %if you want to use this font you need to download it
 %	\setmainfont{TeXGyreTermes-Regular}[
 %       BoldFont       = TeXGyreTermes-Bold ,
 %       ItalicFont     = TeXGyreTermes-Italic ,
